# BlenderKit

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  __init__.py  _bandit.yaml  addon_updater.py  addon_updater_ops.py  append_link.py  asset_bar_op.py  asset_drag_op.py  asset_inspector.py  asset_pack_bg.py  async_tasks.py  autothumb.py  autothumb_material_bg.py  autothumb_model_bg.py  bg_blender.py  bg_utils.py  bkit_oauth.py  blender_manifest.toml  build.py  categories.py  client_lib.py  client_tasks.py  client_thread.py  codecov.yml  colors.py  comments_utils.py  compare_append_link.py  daemon.py  daemon_lib.py  daemon_tasks.py  datas.py  dependencies.py  dev.py  disclaimer_op.py  download.py  exceptions.py  global_vars.py  (+66 more)
.githooks/: post-checkout
.github/: make-tests-matrix.py  release.yml
.github/ISSUE_TEMPLATE/: bug-report-prefilled.yaml  bug-report.yaml  feature-request.yaml  report-prefilled.yaml
.github/workflows/: PR-comment.yml  PR.yml  close-inactive-issues.yml  main-push.yml  main.yml  master-push.yml  nightly.yml  release.yml  win7-build.yml
asset_bar/: asset_bar_op.py  asset_drag_op.py  layout.py
bl_proxor/: __init__.py  draw.py  generate.py  prx_format.py
bl_ui_widgets/: __init__.py  bl_ui_button.py  bl_ui_drag_panel.py  bl_ui_draw_op.py  bl_ui_image.py  bl_ui_label.py  bl_ui_resize_handle.py  bl_ui_widget.py
bl_ui_widgets/video/: __init__.py  bl_ui_video.py  video_decoder.py
blenderkit/: __init__.py  addon_updater_ops.py  autothumb.py  bg_blender.py  comments_utils.py  download.py  ratings.py  reports.py  resolutions.py  search.py  ui.py  ui_panels.py  upload.py  version_checker.py
blenderkit/bl_ui_widgets/: bl_ui_button.py  bl_ui_draw_op.py  bl_ui_image.py
blenderkit_updater/: blenderkit_updater_status.json
blendfiles/: thumbnailer.blend
client/: .gitignore  README.md  download.go  download_test.go  go.mod  go.sum  login.go  main.go  main_test.go  networking.go  run_blender_script.go  structs.go  trash.go  utils.go  utils_test.go  wrappers.go
client/tools/: export_glb.py
daemon/: assets.py  bkserver.py  comments.py  configurator.py  daemon.py  daemon_assets.py  daemon_comments.py  daemon_configurator.py  daemon_disclaimer.py  daemon_globals.py  daemon_oauth.py  daemon_profiles.py  daemon_ratings.py  daemon_search.py  daemon_tasks.py  daemon_uploads.py  daemon_utils.py  disclaimer.py  globals.py  oauth.py  profiles.py  ratings.py  search.py  tasks.py  uploads.py  utils.py
daemon/certs/: blenderkit-com-chain.pem
data/: categories.json
dependencies/Darwin/aiodns-3.0.0.dist-info/: METADATA  RECORD
dependencies/Darwin/aiohttp-3.8.1.dist-info/: RECORD
dependencies/Darwin/aiohttp-3.8.3.dist-info/: RECORD
dependencies/Darwin/aiohttp-3.8.4.dist-info/: RECORD
dependencies/Darwin/aiohttp-3.8.5.dist-info/: RECORD
dependencies/Darwin/aiohttp-3.8.6.dist-info/: RECORD
dependencies/Darwin/aiohttp-3.9.0.dist-info/: RECORD
dependencies/Darwin/aiohttp-3.9.1.dist-info/: METADATA  RECORD
dependencies/Darwin/aiohttp_cors-0.7.0.dist-info/: RECORD
dependencies/Darwin/aiosignal-1.2.0.dist-info/: RECORD
dependencies/Darwin/async_timeout-4.0.2.dist-info/: RECORD
dependencies/Darwin/async_timeout-4.0.3.dist-info/: RECORD
dependencies/Darwin/attrs-22.1.0.dist-info/: RECORD
dependencies/Darwin/certifi-2021.10.8.dist-info/: RECORD
dependencies/Darwin/certifi-2022.6.15.dist-info/: RECORD
dependencies/Darwin/certifi-2023.11.17.dist-info/: RECORD
dependencies/Darwin/certifi-2023.7.22.dist-info/: RECORD
dependencies/Darwin/cffi-1.15.1.dist-info/: RECORD
dependencies/Darwin/charset_normalizer-2.1.1.dist-info/: RECORD
dependencies/Darwin/charset_normalizer-3.0.1.dist-info/: RECORD
dependencies/Darwin/charset_normalizer-3.1.0.dist-info/: RECORD
dependencies/Darwin/charset_normalizer-3.2.0.dist-info/: RECORD
dependencies/Darwin/charset_normalizer-3.3.0.dist-info/: RECORD
dependencies/Darwin/charset_normalizer-3.3.2.dist-info/: RECORD
dependencies/Darwin/frozenlist-1.3.0.dist-info/: RECORD
dependencies/Darwin/frozenlist-1.3.1.dist-info/: RECORD
dependencies/Darwin/frozenlist-1.3.3.dist-info/: RECORD  WHEEL
dependencies/Darwin/frozenlist-1.4.0.dist-info/: RECORD
dependencies/Darwin/frozenlist-1.4.1.dist-info/: RECORD
dependencies/Darwin/idna-3.3.dist-info/: RECORD
dependencies/Darwin/idna-3.6.dist-info/: RECORD
dependencies/Darwin/multidict-6.0.2.dist-info/: RECORD
dependencies/Darwin/multidict-6.0.3.dist-info/: RECORD
dependencies/Darwin/multidict-6.0.4.dist-info/: RECORD
dependencies/Darwin/pycares-4.2.2.dist-info/: RECORD
dependencies/Darwin/yarl-1.7.2.dist-info/: RECORD
dependencies/Darwin/yarl-1.8.1.dist-info/: RECORD
dependencies/Darwin/yarl-1.8.2.dist-info/: RECORD
dependencies/Darwin/yarl-1.9.2.dist-info/: RECORD
dependencies/Darwin/yarl-1.9.3.dist-info/: RECORD
dependencies/Darwin/yarl-1.9.4.dist-info/: RECORD  WHEEL
dependencies/Linux/aiohttp-3.8.1.dist-info/: RECORD
dependencies/Linux/aiohttp-3.8.5.dist-info/: RECORD
dependencies/Linux/aiohttp-3.8.6.dist-info/: RECORD
dependencies/Linux/aiohttp-3.9.0.dist-info/: METADATA  RECORD  WHEEL
dependencies/Linux/aiohttp-3.9.1.dist-info/: RECORD
dependencies/Linux/aiohttp_cors-0.7.0.dist-info/: RECORD
dependencies/Linux/aiosignal-1.2.0.dist-info/: RECORD
dependencies/Linux/async_timeout-4.0.2.dist-info/: RECORD
dependencies/Linux/attrs-22.1.0.dist-info/: RECORD
dependencies/Linux/attrs-23.1.0.dist-info/: RECORD
devs/: requirements.txt
login/: login.go
tests/: .test_paths.py.swp  boilerplate.py  test.py  test_asset_bar_op.py  test_bkit_oauth.py  test_client_lib.py  test_global_vars.py  test_init.py  test_manifest_toml.py  test_override_extension_draw.py  test_paths.py  test_persistent_preferences.py  test_rating_nudge.py  test_registration.py  test_search.py  test_smoke.py  test_timer.py  test_ui_buttons.py  test_ui_panels.py  test_upload.py  test_upload_bg.py  test_utils.py  test_version_compare.py
(+170 files in other folders)
