[project]
requires-python = ">=3.10,<3.13" # in order to support numpy<2.0.0
dependencies = [

]

# these will not be included in build distributions
[dependency-groups]
dev = [
    ## these  are included in blender, for IDE we need them here
    "numpy>=1.21.0,<2.0.0",
    "requests>=2.18.4",
    "types-requests>=2.31.0.5",
    "pywebview>=6.1", # for the web interface
    "mypy==1.13.0",
    "bandit>=1.9.4", # code is currently invalid for bandit
    "ruff>=0.15.6",
    "pydoclint>=0.8.3", # code is currently invalid for pydoclint
]

[tool.ruff]
target-version = "py310"
line-length = 120
include = ["pyproject.toml",
    "**/*.py",
    "*.py"
    ]
exclude = [
  "lib",
  "out",
  "_debug/**",
  "_bck/**",
  "*.tmp",
  "__pycache__/**",
  ".venv/**",
  "*.pyi",
  "sentry_sdk",
]


[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "S1", "S2", "S3", "S5", "BLE", "FBT",
    "B", "A", "C4", "COM", "DTZ", "T10", "FA", "ISC", "ICN", "LOG", "G", "INP", "PIE", "T20", "Q", "RSE", "RET", "SLF",
    "SLOT", "SIM", "TID",
    "TC001", "TC004", "TC005", "TC010",
    "INT", "ARG", "FIX", "ERA", "PL", "TRY", "FLY", "PERF", "RUF"
]

ignore = [
    "RUF012", # mutable value as calss default
    "C901", # function is too complex
    "PLR0912", # definition is too complex
    "ERA001", # use of commented out code
    "FIX002", # use of 'TODO' in comments
    "FBT002", # use of boolean values in if statements
    "FBT003", # use of boolean values in if calls
    "UP045", # use | instead of 'Optional' << we need this for ble3.0
    "E501", # Line too long
    "TRY003", # Logging message too long outside of class
    "BLE001", # Use of bare except
    "D105", # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "PLC0415", # https://docs.astral.sh/ruff/rules/import-outside-top-level/
    "RET504", # https://docs.astral.sh/ruff/rules/unnecessary-assign/
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
exclude = ['test_*', 'out', 'lib']
disallow_untyped_globals = false # remove this in the future

[[tool.mypy.overrides]]
module = [
  "bpy",
  "bpy.*",
  "bpy_extras",
  "mathutils",
  "addonutils",
  "blf",
  "gpu",
  "gpu_extras.*"
]
ignore_missing_imports = true  # Ignore missing type hints for bpy

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
ignore-private-args = true
ignore-underscore-args = true
exclude = "\\.venv|\\sentry_sdk"
